@@ -8,6 +8,8 @@
     * a function to update a configuration file has been introduced.
     * few new options have been added to the configuration file.
     * new options have been added to the option window.
+    * it is now possible to ask the weather station to test automatically the connectivity every period of time defined
+    by the user if it is offline.
 
 
 ### August 20 2022, Release version 0.13.0 ###
